--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ blinker==1.9.0
 certifi==2025.8.3
 click==8.2.1
 colorama==0.4.6
-flask==3.1.1
 flask-cors==6.0.1
 greenlet==3.2.4
 h11==0.16.0
@@ -19,4 +18,6 @@ pyee==13.0.0
 sniffio==1.3.1
 soupsieve==2.7
 typing-extensions==4.14.1
-werkzeug==3.1.3
+flask==3.0.0
+werkzeug==3.0.1
+dash==2.18.1
